--- a/hs-duktape.cabal
+++ b/hs-duktape.cabal
@@ -13,7 +13,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Scripting.Duktape
+  exposed-modules:     Scripting.Duktape.Raw
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
