--- a/hs-duktape.cabal
+++ b/hs-duktape.cabal
@@ -17,12 +17,12 @@ library
                        Scripting.Duktape
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9,
-                       transformers >=0.4 && <0.5,
-                       aeson >=0.10 && <0.11,
-                       vector >=0.11 && <0.12,
-                       scientific >= 0.3 && <0.4,
-                       text >=1.2 && <1.3
+  build-depends:       base,
+                       transformers,
+                       aeson,
+                       vector,
+                       scientific,
+                       text
   hs-source-dirs:      src
   default-language:    Haskell2010
   build-tools:         c2hs -any
